--- a/api-sync.adoc
+++ b/api-sync.adoc
@@ -2,10 +2,10 @@
 sidebar: sidebar
 permalink: api-sync.html
 keywords: api, apis, rest, restful, authorization, getting started, body, header, token, reference, expired token, expires, expired, token expired, list apis, 202, https status code 202, status code 202, id, id field, box
-summary: The Cloud Sync capabilities that are available through the web UI are also available through RESTful APIs.
+summary: The BlueXP copy and sync capabilities that are available through the web UI are also available through RESTful APIs.
 ---
 
-= Cloud Sync APIs
+= BlueXP copy and sync APIs
 :hardbreaks:
 :nofooter:
 :icons: font
@@ -13,11 +13,11 @@ summary: The Cloud Sync capabilities that are available through the web UI are a
 :imagesdir: ./media/
 
 [.lead]
-The Cloud Sync capabilities that are available through the web UI are also available through the RESTful API.
+The BlueXP copy and sync capabilities that are available through the web UI are also available through the RESTful API.
 
 == Getting started
 
-To get started with the Cloud Sync API, you need to obtain a user token and your BlueXP account ID. You'll need to add the token and account ID to the Authorization header when making API calls.
+To get started with the BlueXP copy and sync API, you need to obtain a user token and your BlueXP account ID. You'll need to add the token and account ID to the Authorization header when making API calls.
 
 .Steps
 
@@ -77,7 +77,7 @@ The API response includes an "expires_in" field that states when the token expir
 
 == API reference
 
-Documentation for each Cloud Sync API is available from https://api.cloudsync.netapp.com/docs.
+Documentation for each BlueXP copy and sync API is available from https://api.cloudsync.netapp.com/docs.
 
 == Using list APIs
 
