--- a/concept-cloud-sync.adoc
+++ b/concept-cloud-sync.adoc
@@ -1,11 +1,11 @@
 ---
 sidebar: sidebar
 permalink: concept-cloud-sync.html
-keywords: cloud sync, overview, conceptual, how, data broker, service, cloudsync
-summary: The NetApp Cloud Sync service offers a simple, secure, and automated way to migrate your data to any target, in the cloud or on your premises.
+keywords: BlueXP copy and sync, overview, conceptual, how, data broker, service, cloudsync
+summary: The NetApp BlueXP copy and sync service offers a simple, secure, and automated way to migrate your data to any target, in the cloud or on your premises.
 ---
 
-= Cloud Sync overview
+= BlueXP copy and sync overview
 :hardbreaks:
 :nofooter:
 :icons: font
@@ -13,29 +13,29 @@ summary: The NetApp Cloud Sync service offers a simple, secure, and automated wa
 :imagesdir: ./media/
 
 [.lead]
-The NetApp Cloud Sync service offers a simple, secure, and automated way to migrate your data to any target, in the cloud or on your premises. Whether it’s a file-based NAS dataset (NFS or SMB), Amazon Simple Storage Service (S3) object format, a NetApp StorageGRID® appliance, or any other cloud provider object store, Cloud Sync can convert and move it for you.
+The NetApp BlueXP copy and sync service offers a simple, secure, and automated way to migrate your data to any target, in the cloud or on your premises. Whether it’s a file-based NAS dataset (NFS or SMB), Amazon Simple Storage Service (S3) object format, a NetApp StorageGRID® appliance, or any other cloud provider object store, BlueXP copy and sync can convert and move it for you.
 
 == Features
 
-Watch the following video for an overview of Cloud Sync:
+Watch the following video for an overview of BlueXP copy and sync:
 
 video::oZNJtLvgNfQ[youtube, width=848, height=480]
 
-== How Cloud Sync works
+== How BlueXP copy and sync works
 
-Cloud Sync is a software-as-a-service (SaaS) platform that consists of a data broker group, a cloud-based interface available through BlueXP, and a source and target.
+BlueXP copy and sync is a software-as-a-service (SaaS) platform that consists of a data broker group, a cloud-based interface available through BlueXP, and a source and target.
 
-The following image shows the relationship between Cloud Sync components:
+The following image shows the relationship between BlueXP copy and sync components:
 
-image:diagram_cloud_sync_overview.gif[Conceptual image that shows data flowing from a source to a target. The data broker software acts as a mediator and polls the Cloud Sync service for tasks.]
+image:diagram_cloud_sync_overview.gif[Conceptual image that shows data flowing from a source to a target. The data broker software acts as a mediator and polls the BlueXP copy and sync service for tasks.]
 
-The NetApp data broker software syncs data from a source to a target (this is called a _sync relationship_). You can run the data broker in AWS, Azure, Google Cloud Platform, or on your premises. A data broker group, which consists of one or more data brokers, needs an outbound internet connection over port 443 so it can communicate with the Cloud Sync service and contact a few other services and repositories. link:reference-networking.html[View the list of endpoints].
+The NetApp data broker software syncs data from a source to a target (this is called a _sync relationship_). You can run the data broker in AWS, Azure, Google Cloud Platform, or on your premises. A data broker group, which consists of one or more data brokers, needs an outbound internet connection over port 443 so it can communicate with the BlueXP copy and sync service and contact a few other services and repositories. link:reference-networking.html[View the list of endpoints].
 
 After the initial copy, the service syncs any changed data based on the schedule that you set.
 
 == Supported storage types
 
-Cloud Sync supports the following storage types:
+BlueXP copy and sync supports the following storage types:
 
 * Any NFS server
 * Any SMB server
@@ -60,7 +60,7 @@ link:reference-supported-relationships.html[View the supported sync relationship
 
 == Costs
 
-There are two types of costs associated with using Cloud Sync: resource charges and service charges.
+There are two types of costs associated with using BlueXP copy and sync: resource charges and service charges.
 
 Resource charges:: Resource charges are related to the compute and storage costs for running one or more data brokers in the cloud.
 
