--- a/concept-licensing.adoc
+++ b/concept-licensing.adoc
@@ -15,11 +15,11 @@ summary: There are two ways to pay for sync relationships after your 14-day free
 [.lead]
 There are two ways to pay for sync relationships after your 14-day free trial ends. The first option is to subscribe from AWS or Azure to pay-as-you-go or to pay annually. The second option is to purchase licenses directly from NetApp.
 
-Licenses should be managed through Cloud Sync or the applicable website and *not* through a digital wallet.
+Licenses should be managed through BlueXP copy and sync or the applicable website and *not* through a digital wallet.
 
 == Marketplace subscription
 
-Subscribing to the Cloud Sync service from AWS or Azure enables you to pay at an hourly rate, or to pay annually. link:task-licensing.html[You can subscribe through either AWS or Azure], depending on where you want to be billed.
+Subscribing to the BlueXP copy and sync service from AWS or Azure enables you to pay at an hourly rate, or to pay annually. link:task-licensing.html[You can subscribe through either AWS or Azure], depending on where you want to be billed.
 
 === Hourly subscription
 
@@ -40,11 +40,11 @@ Another way to pay for sync relationships up front is by purchasing licenses dir
 
 You can use these licenses with an AWS or Azure subscription. For example, if you have 25 sync relationships, you can pay for the first 20 sync relationships using a license and then pay-as-you-go from AWS or Azure with the remaining 5 sync relationships.
 
-link:task-licensing.html[Learn how to purchase licenses and add them to Cloud Sync].
+link:task-licensing.html[Learn how to purchase licenses and add them to BlueXP copy and sync].
 
 === License terms
 
-Customers who purchase a Bring Your Own License (BYOL) to the Cloud Sync service should be aware of limitations associated with the license entitlement.
+Customers who purchase a Bring Your Own License (BYOL) to the BlueXP copy and sync service should be aware of limitations associated with the license entitlement.
 
 * Customers are entitled to leverage the BYOL license for a term not to exceed one year from the date of delivery.
 
