--- a/concept-privacy.adoc
+++ b/concept-privacy.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: concept-privacy.html
 keywords: privacy, data privacy, credentials, access to credentials, hashicorp vault
-summary: NetApp doesn't have access to any credentials that you provide while using the Cloud Sync service. The credentials are stored directly on the data broker machine, which resides in your network.
+summary: NetApp doesn't have access to any credentials that you provide while using the BlueXP copy and sync service. The credentials are stored directly on the data broker machine, which resides in your network.
 ---
 
 = Data privacy
@@ -13,9 +13,9 @@ summary: NetApp doesn't have access to any credentials that you provide while us
 :imagesdir: ./media/
 
 [.lead]
-NetApp doesn't have access to any credentials that you provide while using the Cloud Sync service. The credentials are stored directly on the data broker machine, which resides in your network.
+NetApp doesn't have access to any credentials that you provide while using the BlueXP copy and sync service. The credentials are stored directly on the data broker machine, which resides in your network.
 
-Depending on the configuration that you choose, Cloud Sync might prompt you for credentials when you create a new relationship. For example, when setting up a relationship that includes an SMB server, or when deploying the data broker in AWS.
+Depending on the configuration that you choose, BlueXP copy and sync might prompt you for credentials when you create a new relationship. For example, when setting up a relationship that includes an SMB server, or when deploying the data broker in AWS.
 
 These credentials are always saved directly to the data broker itself. The data broker resides on a machine in your network, whether it's on premises or in your cloud account. The credentials are never made available to NetApp.
 
