--- a/faq.adoc
+++ b/faq.adoc
@@ -2,10 +2,10 @@
 sidebar: sidebar
 permalink: faq.html
 keywords: community, forums, help, support, videos, faq, getting help, permissions, access control lists, acls, preserve, preserving, troubleshooting, support, encryption, smb
-summary: You can get help with Cloud Sync and find more information through various resources, including forums, chat services, and videos.
+summary: You can get help with BlueXP copy and sync and find more information through various resources, including forums, chat services, and videos.
 ---
 
-= Cloud Sync technical FAQ
+= BlueXP copy and sync technical FAQ
 :hardbreaks:
 :nofooter:
 :icons: font
@@ -17,58 +17,58 @@ This FAQ can help if you’re just looking for a quick answer to a question.
 
 == Getting started
 
-The following questions relate to getting started with Cloud Sync.
+The following questions relate to getting started with BlueXP copy and sync.
 
-=== How does Cloud Sync work?
+=== How does BlueXP copy and sync work?
 
-Cloud Sync uses the NetApp data broker software to sync data from a source to a target (this is called a _sync relationship_).
+BlueXP copy and sync uses the NetApp data broker software to sync data from a source to a target (this is called a _sync relationship_).
 
-A data broker group controls the sync relationships between your sources and targets. After you set up a sync relationship, Cloud Sync analyzes your source system and breaks it up into multiple replication streams to push to your selected target data.
+A data broker group controls the sync relationships between your sources and targets. After you set up a sync relationship, BlueXP copy and sync analyzes your source system and breaks it up into multiple replication streams to push to your selected target data.
 
 After the initial copy, the service syncs any changed data based on the schedule that you set.
 
 === How does the 14-day free trial work?
 
-The 14-day free trial starts when you sign up for the Cloud Sync service. You're not subject to NetApp charges for Cloud Sync relationships you create for 14 days. However, all resource charges for any data brokers that you deploy still applies.
+The 14-day free trial starts when you sign up for the BlueXP copy and sync service. You're not subject to NetApp charges for BlueXP copy and sync relationships you create for 14 days. However, all resource charges for any data brokers that you deploy still applies.
 
-=== How much does Cloud Sync cost?
+=== How much does BlueXP copy and sync cost?
 
-There are two types of costs associated with using Cloud Sync: service charges and resource charges.
+There are two types of costs associated with using BlueXP copy and sync: service charges and resource charges.
 
 *Service charges*
 
-For pay-as-you-go pricing, Cloud Sync service charges are hourly, based on the number of sync relationships that you create.
+For pay-as-you-go pricing, BlueXP copy and sync service charges are hourly, based on the number of sync relationships that you create.
 
 * https://aws.amazon.com/marketplace/pp/B01LZV5DUJ[View pay-as-you-go pricing in AWS^]
 * https://aws.amazon.com/marketplace/pp/B06XX5V3M2[View annual pricing in AWS^]
 * https://azuremarketplace.microsoft.com/en-us/marketplace/apps/netapp.cloud-sync-service?tab=PlansAndPrice[View pricing in Azure^]
 
-Cloud Sync licenses are also available through your NetApp representative. Each license enables 20 sync relationships for 12 months.
+BlueXP copy and sync licenses are also available through your NetApp representative. Each license enables 20 sync relationships for 12 months.
 
 link:concept-licensing.html[Learn more about licenses].
 
-NOTE: Cloud Sync relationships are free for Cloud Volumes Service and Azure NetApp Files.
+NOTE: BlueXP copy and sync relationships are free for Cloud Volumes Service and Azure NetApp Files.
 
 *Resource charges*
 
 The resource charges are related to the compute and storage costs for running the data broker in the cloud.
 
-=== How is Cloud Sync billed and how do I manage my subscription?
+=== How is BlueXP copy and sync billed and how do I manage my subscription?
 
-There are two ways to pay for sync relationships after your 14-day free trial ends. The first option is to subscribe from AWS or Azure, which enables you to pay-as-you-go or to pay annually. The second option is to purchase licenses directly from NetApp. In each case, your subscription will be managed through your provider marketplace and *not* via the Cloud Sync user interface.
+There are two ways to pay for sync relationships after your 14-day free trial ends. The first option is to subscribe from AWS or Azure, which enables you to pay-as-you-go or to pay annually. The second option is to purchase licenses directly from NetApp. In each case, your subscription will be managed through your provider marketplace and *not* via the BlueXP copy and sync user interface.
 
-=== Can I use Cloud Sync outside the cloud?
+=== Can I use BlueXP copy and sync outside the cloud?
 
-Yes, you can use Cloud Sync in a non-cloud architecture. The source and target can reside on-premises and so can the data broker software.
+Yes, you can use BlueXP copy and sync in a non-cloud architecture. The source and target can reside on-premises and so can the data broker software.
 
-Note the following key points about using Cloud Sync outside of the cloud:
+Note the following key points about using BlueXP copy and sync outside of the cloud:
 
-* A data broker group needs an internet connection to communicate with the Cloud Sync service.
-* If you don't purchase a license directly from NetApp, you will need an AWS or Azure account for the PAYGO Cloud Sync service billing.
+* A data broker group needs an internet connection to communicate with the BlueXP copy and sync service.
+* If you don't purchase a license directly from NetApp, you will need an AWS or Azure account for the PAYGO BlueXP copy and sync service billing.
 
-=== How do I access Cloud Sync?
+=== How do I access BlueXP copy and sync?
 
-Cloud Sync is available from the BlueXP website in the *Sync* tab.
+BlueXP copy and sync is available from the BlueXP website in the *Sync* tab.
 
 === What's a data broker group?
 
@@ -78,13 +78,13 @@ Each data broker belongs to a data broker group. Grouping data brokers together 
 
 The following questions related to the source and targets that are supported in a sync relationship.
 
-=== Which sources and targets does Cloud Sync support?
+=== Which sources and targets does BlueXP copy and sync support?
 
-Cloud Sync supports many different types of sync relationships. link:reference-supported-relationships.html[View the entire list].
+BlueXP copy and sync supports many different types of sync relationships. link:reference-supported-relationships.html[View the entire list].
 
-=== What versions of NFS and SMB does Cloud Sync support?
+=== What versions of NFS and SMB does BlueXP copy and sync support?
 
-Cloud Sync supports NFS version 3 and later, and SMB version 1 and later.
+BlueXP copy and sync supports NFS version 3 and later, and SMB version 1 and later.
 
 link:reference-requirements.html[Learn more about sync requirements].
 
@@ -118,13 +118,13 @@ Yes, you can choose a specific storage class when a Google Cloud Storage bucket 
 
 == Networking
 
-The following questions relate to networking requirements for Cloud Sync.
+The following questions relate to networking requirements for BlueXP copy and sync.
 
-=== What are the networking requirements for Cloud Sync?
+=== What are the networking requirements for BlueXP copy and sync?
 
-The Cloud Sync environment requires that a data broker group is connected with the source and the target through the selected protocol or object storage API (Amazon S3, Azure Blob, IBM Cloud Object Storage).
+The BlueXP copy and sync environment requires that a data broker group is connected with the source and the target through the selected protocol or object storage API (Amazon S3, Azure Blob, IBM Cloud Object Storage).
 
-In addition, a data broker group needs an outbound internet connection over port 443 so it can communicate with the Cloud Sync service and contact a few other services and repositories.
+In addition, a data broker group needs an outbound internet connection over port 443 so it can communicate with the BlueXP copy and sync service and contact a few other services and repositories.
 
 For more details, link:reference-networking.html[review networking requirements].
 
@@ -132,7 +132,7 @@ For more details, link:reference-networking.html[review networking requirements]
 
 Yes.
 
-Cloud Sync supports proxy servers with or without basic authentication. If you specify a proxy server when you deploy a data broker, all HTTP and HTTPS traffic from the data broker is routed through the proxy. Note that non-HTTP traffic such as NFS or SMB can’t be routed through a proxy server.
+BlueXP copy and sync supports proxy servers with or without basic authentication. If you specify a proxy server when you deploy a data broker, all HTTP and HTTPS traffic from the data broker is routed through the proxy. Note that non-HTTP traffic such as NFS or SMB can’t be routed through a proxy server.
 
 The only proxy server limitation is when using data-in-flight encryption with an NFS or Azure NetApp Files sync relationship. The encrypted data is sent over HTTPS and isn’t routable through a proxy server.
 
@@ -168,13 +168,13 @@ Note that there's no limit to the total number of files in the mount point. The 
 
 The following questions related to security.
 
-=== Is Cloud Sync secure?
+=== Is BlueXP copy and sync secure?
 
-Yes. All Cloud Sync service networking connectivity is done using https://aws.amazon.com/sqs/[Amazon Simple Queue Service (SQS)^].
+Yes. All BlueXP copy and sync service networking connectivity is done using https://aws.amazon.com/sqs/[Amazon Simple Queue Service (SQS)^].
 
 All communication between the data broker group and Amazon S3, Azure Blob, Google Cloud Storage, and IBM Cloud Object Storage is done through the HTTPS protocol.
 
-If you're using Cloud Sync with on-premises (source or destination) systems, here's a few recommended connectivity options:
+If you're using BlueXP copy and sync with on-premises (source or destination) systems, here's a few recommended connectivity options:
 
 * An AWS Direct Connect, Azure ExpressRoute, or Google Cloud Interconnect connection, which is non-internet routed (and can only communicate with the cloud networks that you specify)
 
@@ -182,15 +182,15 @@ If you're using Cloud Sync with on-premises (source or destination) systems, her
 
 * For extra secure data transfer with S3 buckets, Azure Blob storage, or Google Cloud Storage, an Amazon Private S3 Endpoint, Azure Virtual Network service endpoints, or Private Google Access may be established.
 
-Any of these methods establishes a secure connection between your on-premises NAS servers and a Cloud Sync data broker group.
+Any of these methods establishes a secure connection between your on-premises NAS servers and a BlueXP copy and sync data broker group.
 
-=== Is data encrypted by Cloud Sync?
+=== Is data encrypted by BlueXP copy and sync?
 
-* Cloud Sync supports data-in-flight encryption between source and target NFS servers. link:task-nfs-encryption.html[Learn more].
+* BlueXP copy and sync supports data-in-flight encryption between source and target NFS servers. link:task-nfs-encryption.html[Learn more].
 
-* For SMB, Cloud Sync supports SMB 3.0 and 3.11 data that you've encrypted on the server side. Cloud Sync copies the encrypted data from the source to the target where the data remains encrypted.
+* For SMB, BlueXP copy and sync supports SMB 3.0 and 3.11 data that you've encrypted on the server side. BlueXP copy and sync copies the encrypted data from the source to the target where the data remains encrypted.
 +
-Cloud Sync cannot encrypt SMB data itself.
+BlueXP copy and sync cannot encrypt SMB data itself.
 
 * When an Amazon S3 bucket is the target in a sync relationship, you can choose whether to enable data encryption using AWS KMS encryption or AES-256 encryption.
 
@@ -200,22 +200,22 @@ The following questions relate to data permissions.
 
 === Are SMB data permissions synced to the target location?
 
-You can set up Cloud Sync to preserve access control lists (ACLs) between a source SMB share and a target SMB share, and from a source SMB share to object storage (except for ONTAP S3).
+You can set up BlueXP copy and sync to preserve access control lists (ACLs) between a source SMB share and a target SMB share, and from a source SMB share to object storage (except for ONTAP S3).
 
-NOTE: Cloud Sync doesn't support copying ACLs from object storage to SMB shares.
+NOTE: BlueXP copy and sync doesn't support copying ACLs from object storage to SMB shares.
 
 link:task-copying-acls.html[Learn how to copy ACLs between SMB shares].
 
 === Are NFS data permissions synced to the target location?
 
-Cloud Sync automatically copies NFS permissions between NFS servers as follows:
+BlueXP copy and sync automatically copies NFS permissions between NFS servers as follows:
 
-* NFS version 3: Cloud Sync copies the permissions and the user group owner.
-* NFS version 4: Cloud Sync copies the ACLs.
+* NFS version 3: BlueXP copy and sync copies the permissions and the user group owner.
+* NFS version 4: BlueXP copy and sync copies the ACLs.
 
 == Object storage metadata
 
-Cloud Sync copies object storage metadata from the source to the target for the following types of sync relationships:
+BlueXP copy and sync copies object storage metadata from the source to the target for the following types of sync relationships:
 
 * Amazon S3 -> Amazon S3 ^1^
 * Amazon S3 -> StorageGRID
@@ -235,7 +235,7 @@ Cloud Sync copies object storage metadata from the source to the target for the 
 
 == Performance
 
-The following questions relate to Cloud Sync performance.
+The following questions relate to BlueXP copy and sync performance.
 
 === What does the progress indicator for a sync relationship represent?
 
@@ -275,23 +275,23 @@ Then you can consider accelerating sync performance by adding an additional data
 
 The following questions relate to deleting sync relationships and data from sources and targets.
 
-=== What happens if I delete my Cloud Sync relationship?
+=== What happens if I delete my BlueXP copy and sync relationship?
 
 Deleting a relationship stops all future data syncs and terminates payment. Any data that was synced to the target remains as-is.
 
 === What happens if I delete something from my source server? Is it removed from the target too?
 
-By default, if you have an active sync relationship, the item deleted on the source server is not deleted from the target during the next synchronization. But there is an option in the sync settings for each relationship, where you can define that Cloud Sync will delete files in the target location if they were deleted from the source.
+By default, if you have an active sync relationship, the item deleted on the source server is not deleted from the target during the next synchronization. But there is an option in the sync settings for each relationship, where you can define that BlueXP copy and sync will delete files in the target location if they were deleted from the source.
 
 link:task-managing-relationships.html#changing-the-settings-for-a-sync-relationship[Learn how to change the settings for a sync relationship].
 
 === What happens if I delete something from my target? Is it removed from my source too?
 
-If an item is deleted from the target, it will not be removed from the source. The relationship is one-way—from source to target. On the next sync cycle, Cloud Sync compares the source to the target, identifies that the item is missing, and Cloud Sync copies it again from the source to the target.
+If an item is deleted from the target, it will not be removed from the source. The relationship is one-way—from source to target. On the next sync cycle, BlueXP copy and sync compares the source to the target, identifies that the item is missing, and BlueXP copy and sync copies it again from the source to the target.
 
 == Troubleshooting
 
-https://kb.netapp.com/Advice_and_Troubleshooting/Cloud_Services/Cloud_Sync/Cloud_Sync_FAQ:_Support_and_Troubleshooting[NetApp Knowledgebase: Cloud Sync FAQ: Support and Troubleshooting^]
+https://kb.netapp.com/Advice_and_Troubleshooting/Cloud_Services/Cloud_Sync/Cloud_Sync_FAQ:_Support_and_Troubleshooting[NetApp Knowledgebase: BlueXP copy and sync FAQ: Support and Troubleshooting^]
 
 == Data broker deep dive
 
@@ -303,7 +303,7 @@ Sure. Here are the most important points:
 
 * The data broker is a node.js application running on a Linux host.
 
-* Cloud Sync deploys the data broker as follows:
+* BlueXP copy and sync deploys the data broker as follows:
 
 ** AWS: From an AWS CloudFormation template
 ** Azure: From Azure Resource Manager
