--- a/index.adoc
+++ b/index.adoc
@@ -2,11 +2,11 @@
 layout: astra
 sidebar: sidebar
 permalink: index.html
-lead: Cloud Sync is a cloud replication and synchronization service for transferring NAS data between on-premises and cloud object stores.
-summary: Cloud Sync is a cloud replication and synchronization service for transferring NAS data between on-premises and cloud object stores.
+lead: BlueXP copy and sync is a cloud replication and synchronization service for transferring NAS data between on-premises and cloud object stores.
+summary: BlueXP copy and sync is a cloud replication and synchronization service for transferring NAS data between on-premises and cloud object stores.
 ---
 
-= Cloud Sync documentation
+= BlueXP copy and sync documentation
 :hardbreaks:
 :nofooter:
 :icons: font
