--- a/legal-notices.adoc
+++ b/legal-notices.adoc
@@ -16,4 +16,4 @@ include::https://raw.githubusercontent.com/NetAppDocs/common/main/_include/commo
 include::https://raw.githubusercontent.com/NetAppDocs/common/main/_include/open-source-notice-intro.adoc[]
 
 // Add required link(s)
-link:media/notice_cloud_sync.pdf[Notice for Cloud Sync^]
+link:media/notice_cloud_sync.pdf[Notice for BlueXP copy and sync^]
