--- a/reference-limitations.adoc
+++ b/reference-limitations.adoc
@@ -15,7 +15,7 @@ summary: Known limitations identify platforms, devices, or functions that are no
 [.lead]
 Known limitations identify platforms, devices, or functions that are not supported by this release of the product, or that do not interoperate correctly with it. Review these limitations carefully.
 
-Cloud Sync is not supported in the following regions:
+BlueXP copy and sync is not supported in the following regions:
 
 * AWS Government regions
 
