--- a/task-creating-relationships.adoc
+++ b/task-creating-relationships.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: task-creating-relationships.html
 keywords: sync, relationship, create, tags, settings, create a relationship, creating relationships, bucket setup, tags
-summary: When you create a sync relationship, the Cloud Sync service copies files from the source to the target. After the initial copy, the service syncs any changed data every 24 hours.
+summary: When you create a sync relationship, the BlueXP copy and sync service copies files from the source to the target. After the initial copy, the service syncs any changed data every 24 hours.
 ---
 
 = Create sync relationships
@@ -13,7 +13,7 @@ summary: When you create a sync relationship, the Cloud Sync service copies file
 :imagesdir: ./media/
 
 [.lead]
-When you create a sync relationship, the Cloud Sync service copies files from the source to the target. After the initial copy, the service syncs any changed data every 24 hours.
+When you create a sync relationship, the BlueXP copy and sync service copies files from the source to the target. After the initial copy, the service syncs any changed data every 24 hours.
 
 Before you can create some types of sync relationships, you'll first need to create a working environment in BlueXP.
 
@@ -77,7 +77,7 @@ image:screenshot-data-broker-group.png[This screenshot shows a successfully depl
 
 . [[filter]]On the *Directories* page, select a top-level directory or subdirectory.
 +
-If Cloud Sync is unable to retrieve the exports, click *Add Export Manually* and enter the name of an NFS export.
+If BlueXP copy and sync is unable to retrieve the exports, click *Add Export Manually* and enter the name of an NFS export.
 +
 NOTE: If you want to sync more than one directory on the NFS server, then you must create additional sync relationships after you are done.
 
@@ -97,13 +97,13 @@ image:screenshot_bucket_setup.gif[This screenshot shows the Bucket Setup page wh
 +
 Schedule:: Choose a recurring schedule for future syncs or turn off the sync schedule. You can schedule a relationship to sync data as often as every 1 minute.
 
-Sync Timeout:: Define whether Cloud Sync should cancel a data sync if the sync hasn't completed in the specified number of hours or days.
+Sync Timeout:: Define whether BlueXP copy and sync should cancel a data sync if the sync hasn't completed in the specified number of hours or days.
 
-Notifications:: Enables you to choose whether to receive Cloud Sync notifications in BlueXP's Notification Center. You can enable notifications for successful data syncs, failed data syncs, and canceled data syncs.
+Notifications:: Enables you to choose whether to receive BlueXP copy and sync notifications in BlueXP's Notification Center. You can enable notifications for successful data syncs, failed data syncs, and canceled data syncs.
 
-Retries:: Define the number of times that Cloud Sync should retry to sync a file before skipping it.
+Retries:: Define the number of times that BlueXP copy and sync should retry to sync a file before skipping it.
 
-Continuous Sync:: After the initial data sync, Cloud Sync listens for changes on the source S3 bucket or Google Cloud Storage bucket and continuously syncs any changes to the target as they occur. There's no need to rescan the source at scheduled intervals.
+Continuous Sync:: After the initial data sync, BlueXP copy and sync listens for changes on the source S3 bucket or Google Cloud Storage bucket and continuously syncs any changes to the target as they occur. There's no need to rescan the source at scheduled intervals.
 +
 This setting is available only when creating a sync relationship and when you sync data from an S3 bucket or Google Cloud Storage to Azure Blob storage, CIFS, Google Cloud Storage, IBM Cloud Object Storage, NFS, S3, and StorageGRID *or* from Azure Blob storage to Azure Blob storage, CIFS, Google Cloud Storage, IBM Cloud Object Storage, NFS, and StorageGRID.
 +
@@ -114,16 +114,16 @@ If you enable this setting, it affects other features as follows:
 * If S3 is the source, filter by size will be active only on copy events (not on delete events).
 * After the relationship is created, you can only accelerate or delete the relationship. You can't abort syncs, modify settings, or view reports.
 
-Compare By:: Choose whether Cloud Sync should compare certain attributes when determining whether a file or directory has changed and should be synced again.
+Compare By:: Choose whether BlueXP copy and sync should compare certain attributes when determining whether a file or directory has changed and should be synced again.
 +
-Even if you uncheck these attributes, Cloud Sync still compares the source to the target by checking the paths, file sizes, and file names. If there are any changes, then it syncs those files and directories.
+Even if you uncheck these attributes, BlueXP copy and sync still compares the source to the target by checking the paths, file sizes, and file names. If there are any changes, then it syncs those files and directories.
 +
-You can choose to enable or disable Cloud Sync from comparing the following attributes:
+You can choose to enable or disable BlueXP copy and sync from comparing the following attributes:
 +
 * *mtime*: The last modified time for a file. This attribute isn't valid for directories.
 * *uid*, *gid*, and *mode*: Permission flags for Linux.
 
-Copy for Objects:: Enable this option to copy object storage metadata and tags. If a user changes the metadata on the source, Cloud Sync copies this object in the next sync, but if a user changes the tags on the source (and not the data itself), Cloud Sync doesn't copy the object in the next sync.
+Copy for Objects:: Enable this option to copy object storage metadata and tags. If a user changes the metadata on the source, BlueXP copy and sync copies this object in the next sync, but if a user changes the tags on the source (and not the data itself), BlueXP copy and sync doesn't copy the object in the next sync.
 +
 You can't edit this option after you create the relationship.
 +
@@ -139,7 +139,7 @@ Copying metadata is supported with "cloud-to-cloud" relationships between any of
 
 Recently Modified Files:: Choose to exclude files that were recently modified prior to the scheduled sync.
 
-Delete Files on Source:: Choose to delete files from the source location after Cloud Sync copies the files to the target location. This option includes the risk of data loss because the source files are deleted after they're copied.
+Delete Files on Source:: Choose to delete files from the source location after BlueXP copy and sync copies the files to the target location. This option includes the risk of data loss because the source files are deleted after they're copied.
 +
 If you enable this option, you also need to change a parameter in the local.json file on the data broker. Open the file and update it as follows:
 +
@@ -180,11 +180,11 @@ TIP: This same feature is available when syncing data to StorageGRID and IBM Clo
 
 *Result*
 
-Cloud Sync starts syncing data between the source and target.
+BlueXP copy and sync starts syncing data between the source and target.
 
 == Create sync relationships from Cloud Data Sense
 
-Cloud Sync is integrated with Cloud Data Sense. From within Data Sense, you can select the source files that you'd like to sync to a target location using Cloud Sync.
+BlueXP copy and sync is integrated with Cloud Data Sense. From within Data Sense, you can select the source files that you'd like to sync to a target location using BlueXP copy and sync.
 
 After you initiate a data sync from Cloud Data Sense, all of the source information is contained in a single step and only requires you to enter a few key details. You then choose the target location for the new sync relationship.
 
