--- a/task-installing-azure.adoc
+++ b/task-installing-azure.adoc
@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: task-installing-azure.html
 keywords: data broker, install, azure, networking, permissions, regions, install data broker in azure, install in azure, deploy in azure, deploy data broker in azure, networking requirements, port, ports, 443, port 443, ntp, network time protocol, azure data broker
-summary: When you create a new data broker, choose the Azure Data Broker option to deploy the data broker software on a new virtual machine in a VNet. Cloud Sync guides you through the installation process, but the requirements and steps are repeated on this page to help you prepare for installation.
+summary: When you create a new data broker, choose the Azure Data Broker option to deploy the data broker software on a new virtual machine in a VNet. BlueXP copy and sync guides you through the installation process, but the requirements and steps are repeated on this page to help you prepare for installation.
 ---
 
 = Creating a new data broker in Azure
@@ -13,7 +13,7 @@ summary: When you create a new data broker, choose the Azure Data Broker option 
 :imagesdir: ./media/
 
 [.lead]
-When you create a new data broker group, choose the Microsoft Azure to deploy the data broker software on a new virtual machine in a VNet. Cloud Sync guides you through the installation process, but the requirements and steps are repeated on this page to help you prepare for installation.
+When you create a new data broker group, choose the Microsoft Azure to deploy the data broker software on a new virtual machine in a VNet. BlueXP copy and sync guides you through the installation process, but the requirements and steps are repeated on this page to help you prepare for installation.
 
 You also have the option to install the data broker on an existing Linux host in the cloud or on your premises. link:task-installing-linux.html[Learn more].
 
@@ -27,9 +27,9 @@ The data broker software automatically runs as root on the Linux host. Running a
 
 == Networking requirements
 
-* The data broker needs an outbound internet connection so it can poll the Cloud Sync service for tasks over port 443.
+* The data broker needs an outbound internet connection so it can poll the BlueXP copy and sync service for tasks over port 443.
 +
-When Cloud Sync deploys the data broker in Azure, it creates a security group that enables the required outbound communication.
+When BlueXP copy and sync deploys the data broker in Azure, it creates a security group that enables the required outbound communication.
 +
 If you need to limit outbound connectivity, see link:reference-networking.html[the list of endpoints that the data broker contacts].
 
@@ -158,7 +158,7 @@ NOTE: If you plan to implement a Continuous Sync relationship, you must assign a
 +
 The process can take up to 7 minutes.
 
-. In Cloud Sync, click *Continue* once the data broker is available.
+. In BlueXP copy and sync, click *Continue* once the data broker is available.
 
 . Complete the pages in the wizard to create the new sync relationship.
 
@@ -168,7 +168,7 @@ You have deployed a data broker in Azure and created a new sync relationship. Yo
 
 .Getting a message about needing admin consent?
 ****
-If Microsoft notifies you that admin approval is required because Cloud Sync needs permission to access resources in your organization on your behalf, then you have two options:
+If Microsoft notifies you that admin approval is required because BlueXP copy and sync needs permission to access resources in your organization on your behalf, then you have two options:
 
 . Ask your AD admin to provide you with the following permission:
 +
@@ -183,7 +183,7 @@ As shown in the URL, our app URL is \https://cloudsync.netapp.com and the applic
 
 == Details about the data broker VM
 
-Cloud Sync creates a data broker in Azure using the following configuration.
+BlueXP copy and sync creates a data broker in Azure using the following configuration.
 
 VM type::
 Standard DS4 v2
