--- a/task-managing-relationships.adoc
+++ b/task-managing-relationships.adoc
@@ -30,7 +30,7 @@ Rather than wait for the next scheduled sync, you can press a button to immediat
 
 .Result
 
-Cloud Sync starts the data sync process for the relationship.
+BlueXP copy and sync starts the data sync process for the relationship.
 
 == Accelerating sync performance
 
@@ -56,19 +56,19 @@ You want to accelerate the performance of relationship 1 so you add a new data b
 
 . Click *Accelerate*.
 //+
-//image:screenshot_accelerate.gif[A screenshot of Cloud Sync that shows the action menu for a sync relationship. Accelerate is highlighted with the mouse pointer.]
+//image:screenshot_accelerate.gif[A screenshot of BlueXP copy and sync that shows the action menu for a sync relationship. Accelerate is highlighted with the mouse pointer.]
 
 . Follow the prompts to create a new data broker.
 
 .Result
 
-Cloud Sync adds the new data broker to the group. The performance of the next data sync should be accelerated.
+BlueXP copy and sync adds the new data broker to the group. The performance of the next data sync should be accelerated.
 
 == Updating credentials
 
 You can update the data broker with the latest credentials of the source or target in an existing sync relationship. Updating the credentials can help if your security policies require you to update credentials on a periodic basis.
 
-Updating credentials is supported with any source or target that Cloud Sync requires credentials for: Azure Blob, Box, IBM Cloud Object Storage, StorageGRID, ONTAP S3 Storage, SFTP, and SMB servers.
+Updating credentials is supported with any source or target that BlueXP copy and sync requires credentials for: Azure Blob, Box, IBM Cloud Object Storage, StorageGRID, ONTAP S3 Storage, SFTP, and SMB servers.
 
 .Steps
 
@@ -80,15 +80,15 @@ image:screenshot_sync_update_credentials.png[A screenshot that shows the Update 
 +
 A note about SMB servers: if the domain is new, then you'll need to specify it when you update the credentials. If the domain hasn't changed, then you don't need to enter it again.
 +
-If you entered a domain when you created the sync relationship, but you don't enter a new domain when you update the credentials, then Cloud Sync will keep using the original domain that you provided.
+If you entered a domain when you created the sync relationship, but you don't enter a new domain when you update the credentials, then BlueXP copy and sync will keep using the original domain that you provided.
 
 .Result
 
-Cloud Sync updates the credentials on the data broker. It can take up 10 minutes until the data broker starts using the updated credentials for data syncs.
+BlueXP copy and sync updates the credentials on the data broker. It can take up 10 minutes until the data broker starts using the updated credentials for data syncs.
 
 == Setting up notifications
 
-A *Notifications* setting for each sync relationship enables you to choose whether to receive Cloud Sync notifications in BlueXP's Notification Center. You can enable notifications for successful data syncs, failed data syncs, and canceled data syncs.
+A *Notifications* setting for each sync relationship enables you to choose whether to receive BlueXP copy and sync notifications in BlueXP's Notification Center. You can enable notifications for successful data syncs, failed data syncs, and canceled data syncs.
 
 image:https://raw.githubusercontent.com/NetAppDocs/cloud-manager-sync/main/media/screenshot-notification-center.png[A screenshot that shows the Notification Center in BlueXP.]
 
@@ -116,7 +116,7 @@ In addition, you can also receive notifications by email.
 
 .Result
 
-You'll now receive Cloud Sync notifications in BlueXP's Notification Center, with a few notifications arriving by email, if you configured that option.
+You'll now receive BlueXP copy and sync notifications in BlueXP's Notification Center, with a few notifications arriving by email, if you configured that option.
 
 == Changing the settings for a sync relationship
 
@@ -134,19 +134,19 @@ image:screenshot_sync_settings.png[A screenshot that shows the settings for a sy
 +
 Schedule:: Choose a recurring schedule for future syncs or turn off the sync schedule. You can schedule a relationship to sync data as often as every 1 minute.
 
-Sync Timeout:: Define whether Cloud Sync should cancel a data sync if the sync hasn't completed in the specified number of hours or days.
+Sync Timeout:: Define whether BlueXP copy and sync should cancel a data sync if the sync hasn't completed in the specified number of hours or days.
 
-Notifications:: Enables you to choose whether to receive Cloud Sync notifications in BlueXP's Notification Center. You can enable notifications for successful data syncs, failed data syncs, and canceled data syncs.
+Notifications:: Enables you to choose whether to receive BlueXP copy and sync notifications in BlueXP's Notification Center. You can enable notifications for successful data syncs, failed data syncs, and canceled data syncs.
 +
 If you want to receive notifications for
 
-Retries:: Define the number of times that Cloud Sync should retry to sync a file before skipping it.
+Retries:: Define the number of times that BlueXP copy and sync should retry to sync a file before skipping it.
 
-Compare By:: Choose whether Cloud Sync should compare certain attributes when determining whether a file or directory has changed and should be synced again.
+Compare By:: Choose whether BlueXP copy and sync should compare certain attributes when determining whether a file or directory has changed and should be synced again.
 +
-Even if you uncheck these attributes, Cloud Sync still compares the source to the target by checking the paths, file sizes, and file names. If there are any changes, then it syncs those files and directories.
+Even if you uncheck these attributes, BlueXP copy and sync still compares the source to the target by checking the paths, file sizes, and file names. If there are any changes, then it syncs those files and directories.
 +
-You can choose to enable or disable Cloud Sync from comparing the following attributes:
+You can choose to enable or disable BlueXP copy and sync from comparing the following attributes:
 +
 * *mtime*: The last modified time for a file. This attribute isn't valid for directories.
 * *uid*, *gid*, and *mode*: Permission flags for Linux.
@@ -156,7 +156,7 @@ Copy for Objects:: You can't edit this option after you create the relationship.
 Recently Modified Files:: Choose to exclude files that were recently modified prior to the scheduled sync.
 
 Delete Files on Source::
-Choose to delete files from the source location after Cloud Sync copies the files to the target location. This option includes the risk of data loss because the source files are deleted after they're copied.
+Choose to delete files from the source location after BlueXP copy and sync copies the files to the target location. This option includes the risk of data loss because the source files are deleted after they're copied.
 +
 If you enable this option, you also need to change a parameter in the local.json file on the data broker. Open the file and update it as follows:
 +
@@ -191,7 +191,7 @@ ACL - Access Control List:: Copy ACLs from an SMB server by enabling a setting w
 
 .Result
 
-Cloud Sync modifies the sync relationship with the new settings.
+BlueXP copy and sync modifies the sync relationship with the new settings.
 
 == Deleting relationships
 
@@ -205,4 +205,4 @@ You can delete a sync relationship, if you no longer need to sync data between t
 
 .Result
 
-Cloud Sync deletes the sync relationship.
+BlueXP copy and sync deletes the sync relationship.
