--- a/task-nfs-encryption.adoc
+++ b/task-nfs-encryption.adoc
@@ -92,7 +92,7 @@ Note the following:
 +
 * If you want to use an existing data broker group, the group must have only one data broker. Multiple data brokers in a group aren't supported with encrypted sync relationships.
 * If the source data broker acts as the listener, then it must be a new data broker.
-* If you need a new data broker, Cloud Sync prompts you with the installation instructions. You can deploy the data broker in the cloud or download an installation script for your own Linux host.
+* If you need a new data broker, BlueXP copy and sync prompts you with the installation instructions. You can deploy the data broker in the cloud or download an installation script for your own Linux host.
 
 .. *Directories*: Choose the directories that you want to sync by selecting all directories, or by drilling down and selecting a subdirectory.
 +
@@ -120,4 +120,4 @@ image:screenshot_nfs_encryption_review.gif["A screenshot showing the review scre
 
 .Result
 
-Cloud Sync starts creating the new sync relationship. When it's done, click *View in Dashboard* to view details about the new relationship.
+BlueXP copy and sync starts creating the new sync relationship. When it's done, click *View in Dashboard* to view details about the new relationship.
