--- a/task-quick-start.adoc
+++ b/task-quick-start.adoc
@@ -2,17 +2,17 @@
 sidebar: sidebar
 permalink: task-quick-start.html
 keywords: quick start, overview, deploying, getting started, get started, signing up, free trial
-summary: Getting started with the Cloud Sync service includes a few steps.
+summary: Getting started with the BlueXP copy and sync service includes a few steps.
 ---
 
-= Quick start for Cloud Sync
+= Quick start for BlueXP copy and sync
 :hardbreaks:
 :nofooter:
 :icons: font
 :linkattrs:
 :imagesdir: ./media/
 
-Getting started with the Cloud Sync service includes a few steps.
+Getting started with the BlueXP copy and sync service includes a few steps.
 
 .image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-1.png[One] Log in and set up BlueXP
 
@@ -47,10 +47,10 @@ Verify that your source and target are supported and set up. The most important 
 .image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-3.png[Three] Prepare a location for the NetApp data broker
 
 [role="quick-margin-para"]
-The NetApp data broker software syncs data from a source to a target (this is called a _sync relationship_). You can run the data broker in AWS, Azure, Google Cloud Platform, or on your premises. A data broker group, which consists of one or more data brokers, needs an outbound internet connection over port 443 so it can communicate with the Cloud Sync service and contact a few other services and repositories. link:reference-networking.html#networking-endpoints[View the list of endpoints].
+The NetApp data broker software syncs data from a source to a target (this is called a _sync relationship_). You can run the data broker in AWS, Azure, Google Cloud Platform, or on your premises. A data broker group, which consists of one or more data brokers, needs an outbound internet connection over port 443 so it can communicate with the BlueXP copy and sync service and contact a few other services and repositories. link:reference-networking.html#networking-endpoints[View the list of endpoints].
 
 [role="quick-margin-para"]
-Cloud Sync guides you through the installation process when you create a sync relationship, at which point you can deploy a data broker in the cloud or download an install script for your own Linux host.
+BlueXP copy and sync guides you through the installation process when you create a sync relationship, at which point you can deploy a data broker in the cloud or download an install script for your own Linux host.
 
 [role="quick-margin-list"]
 * link:task-installing-aws.html[Review AWS installation]
@@ -66,4 +66,4 @@ Log in to https://console.bluexp.netapp.com/[BlueXP^], click *Sync*, and then dr
 .image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-5.png[Five] Pay for your sync relationships after your free trial ends
 
 [role="quick-margin-para"]
-Subscribe from AWS or Azure to pay-as-you-go or to pay annually. Or purchase licenses directly from NetApp. Just go to the License Settings page in Cloud Sync to set it up. link:task-licensing.html[Learn more].
+Subscribe from AWS or Azure to pay-as-you-go or to pay annually. Or purchase licenses directly from NetApp. Just go to the License Settings page in BlueXP copy and sync to set it up. link:task-licensing.html[Learn more].
